<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--android:background="#8BC34A"-->

    <!--
    <TextView
        android:id="@+id/title"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/textview_title"
        android:gravity="center"
        android:textSize="60sp"
        android:textColor="@android:color/background_light"
        android:text="@string/title" />

     -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:src="@drawable/logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:background="@drawable/btn_blue"
            android:drawableTop="@drawable/ic_svg_camera"
            android:textSize="30sp"
            android:textColor="@android:color/background_light"
            android:text="@string/camera">
        </Button>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp">
            <Button
                android:id="@+id/button_picture"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:padding="10dp"
                android:background="@drawable/btn_purple"
                android:drawableTop="@drawable/ic_svg_pic"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:text="@string/sel_pic"
                style="?android:attr/borderlessButtonStyle">
            </Button>

            <Button
                android:id="@+id/button_about"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:padding="10dp"
                android:background="@drawable/btn_orange"
                android:drawableTop="@drawable/ic_svg_info"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:text="@string/about"
                style="?android:attr/borderlessButtonStyle">
            </Button>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>